# iced-wgpu-nav

./: Cargo.toml  README.md
graphics/: Cargo.toml
native/: Cargo.toml
src/: home.rs  main.rs
src/homescreen/: homescreen.rs
src/icons/: icons.rs
src/navbar/: mod.rs  nav_style.rs
src/public_state/: mod.rs  nav_state.rs
style/: Cargo.toml
wgpu/: Cargo.toml
wgpu/src/: lib.rs
winit/: Cargo.toml
winit/src/: application.rs
