[package]
name = "wgpu_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced_native = { path = "./native" }
iced_wgpu = { path = "./wgpu" }
iced_winit = { path = "./winit" }
winapi = "0.3.9"
tokio = { version = "1.20.1", features = ["full"] }
haphazard = "0.1.4"

[dependencies.naga]
git = "https://github.com/gfx-rs/naga"
version = "0.9.0"
optional = true

# used to test all the example shaders
[dev-dependencies.naga]
git = "https://github.com/gfx-rs/naga"
version = "0.9.0"
features = ["wgsl-in"]